--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/imanuelgittens/max-fitness-test-suite/issues"
   },
-  "homepage": "https://github.com/imanuelgittens/max-fitness-test-suite#readme"
+  "homepage": "https://github.com/imanuelgittens/max-fitness-test-suite#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "mongodb": "^3.5.5"
+  }
 }
